removing value data-bind as we don't have a dedicated PRACTICE template need to refine / figure out an appropriate mechanism for switching templates

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -32,9 +32,9 @@
     <div class='control-group'>
         <div class='controls'>
             <label class='control-label' for='pick-template'>Round template</label>
-            <select id='pick-template' data-bind='value: roundType'>
+            <select id='pick-template'>
                 <option value='WELCOME'>Welcome</option>
-                <option value='INSTRUCTIONS'>Instructions</option>
+                <option value='INSTRUCTIONS' selected>Instructions</option>
                 <option value='PRACTICE'>Practice round</option>
                 <option value='REGULAR'>Actual round</option>
             </select>
