minor html compliance, & should be &amp;

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -23,7 +23,7 @@
         </div>
         <div>
             You can find up-to-date development news and our <a class='external' 
-                href='https://bitbucket.org/virtualcommons/vcweb/issues?status=new&status=open'>issue tracker</a> 
+                href='https://bitbucket.org/virtualcommons/vcweb/issues?status=new&amp;status=open'>issue tracker</a> 
             at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>our BitBucket repository</a>.
         </div>
         <h2>Acknowledgements</h2>
