first cut at html version of participant registration email for lighterprints pretest, will need to be re-adjusted for the actual experiment

--- a/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
@@ -1,29 +1,36 @@
+<p>
 Hello,
-
+</p>
+<p>
 Thanks in advance for participating in this experiment pretest. You have been randomly allocated to a group of 5, along
 with four other students who are also in ASB 328. You can earn extra credit points for the course by performing actions
 within the app to reduce your virtual carbon footprint. 
-
+</p>
+<p>
 To access the game go to <a href='https://vcweb.asu.edu'>https://vcweb.asu.edu</a> and login with the following
 credentials:
-
-    Email:          {{ participant.email }}
-    Password:       {{ password }} 
-
-You can reset your password by visiting
-
-    https://vcweb.asu.edu/accounts/password/reset?email={{ participant.email }}
-
+</p>
+<table>
+    <tr>
+        <td>Email:</td><td>{{ participant.email }}</td>
+        <td>Password:</td><td>{{ password }}</td>
+    </tr>
+</table>
+<p>
+You can reset your password at any time at <a href='https://vcweb.asu.edu/accounts/password/reset?email={{ participant.email }}'>https://vcweb.asu.edu/accounts/password/reset</a>
+</p>
+<p>
 The experiment will run starting Monday, February 25th until midnight on Friday, March 1st.  There are three levels to
 this experiment, and your group must reach specific average carbon footprint savings in order to advance to the next
 level.  This will be explained in more detail when you visit the app.
+</p>
+<p>
+The extra credit points you can earn is based on the performance of your group:
 
-You can earn extra credit points based on the performance of your group:
-
-* If your group completes level 3 by midnight on Wednesday, February 27th each member of your group will earn 10 points
-* If your group completes level 3 by midnight on Thursday, February 28th each member of your group will earn 8 points
-* If your group completes level 3 by midnight on Friday, March 1st, each member of your group will earn 6 points
-* If your group completes level 2 by midnight on Friday, March 1st, each member of your group will earn 4 points
-* If your group completes level 1 by midnight on Friday, March 1st, each member of your group will earn 2 points
-
-
+<ul>
+    <li> If your group completes level 3 by midnight on Wednesday, February 27th each member of your group will earn 10 points</li>
+    <li> If your group completes level 3 by midnight on Thursday, February 28th each member of your group will earn 8 points</li>
+    <li> If your group completes level 3 by midnight on Friday, March 1st, each member of your group will earn 6 points</li>
+    <li> If your group completes level 2 by midnight on Friday, March 1st, each member of your group will earn 4 points</li>
+    <li> If your group completes level 1 by midnight on Friday, March 1st, each member of your group will earn 2 points</li>
+</ul>
