tables don't appear to be rendering properly, replacing with uls

--- a/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
@@ -10,10 +10,10 @@ within the app to reduce your virtual carbon footprint.
 To access the experiment visit <a href='https://vcweb.asu.edu'>https://vcweb.asu.edu</a> and login with the following
 credentials:
 </p>
-<table cellspacing="3" cellpadding="3">
-    <tr><td>Email:</td><td>{{ participant.email }}</td></tr>
-    <tr><td>Password:</td><td>{{ password }}</td></tr>
-</table>
+<ul>
+    <li>Email: {{ participant.email }}</li>
+    <li>Password:</td><td>{{ password }}</li>
+</ul>
 <p>
 You can reset your password at any time at <a href='https://vcweb.asu.edu/accounts/password/reset?email={{ participant.email }}'>https://vcweb.asu.edu/accounts/password/reset</a>
 </p>
@@ -24,7 +24,6 @@ level.  This will be explained in more detail when you visit the app.
 </p>
 <p>
 The extra credit points you can earn is based on the performance of your group:
-
 <ul>
     <li> If your group completes level 3 by midnight on Wednesday, February 27th each member of your group will earn 10 points</li>
     <li> If your group completes level 3 by midnight on Thursday, February 28th each member of your group will earn 8 points</li>
