removing learn more link from challenges section

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -485,7 +485,9 @@ $(function() {
             <span data-bind='if: upcoming'>Not yet available <i class='icon-time'></i></span>
             <span data-bind='if: locked'>Locked <i class='icon-lock'></i></span>
             </a> 
+            {% comment %} FIXME: enable once we have more info again
             <small><a href='#'>Learn more</a></small>
+            {% endcomment %}
         </form>
     </div>
     <div style='padding: 15px 0;' class='span2'>
