--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -1,6 +1,6 @@
 {% extends "experimenter/base.html" %}
 {% block title %}
-#{{ experiment.pk }}: {{ experiment.experiment_metadata }}
+{{ experiment.experiment_metadata }} #{{ experiment.pk }}
 {% endblock %}
 {% block page %}
 {{block.super}}
@@ -86,26 +86,28 @@
                 <table class='table table-striped table-bordered'>
                     <caption>Group data</caption>
                     <thead>
-                        <tr><th>Group</th><th>Parameter</th><th>Value</th></tr>
+                        <tr><th>Group</th><th>Parameter</th><th>Value</th><th>Date created</th></tr>
                     </thead>
                     <tbody data-bind='foreach: groupDataValues'>
                     <tr>
                         <td data-bind='text: group'></td>
-                        <td data-bind='text: parameter'></td>
+                        <td data-bind='text: parameter_label'></td>
                         <td data-bind='text: value'></td>
+                        <td data-bind='text: date_created'></td>
                     </tr>
                     </tbody>
                 </table>
                 <table class='table table-striped table-bordered'>
                     <caption>Participant data</caption>
                     <thead>
-                        <tr><th>Participant</th><th>Parameter</th><th>Value</th></tr>
+                        <tr><th>Participant</th><th>Parameter</th><th>Value</th><th>Date Created</th></tr>
                     </thead>
                     <tbody data-bind='foreach: participantDataValues'>
                     <tr>
-                        <td data-bind='text: participantLabel'></td>
-                        <td data-bind='text: parameter'></td>
+                        <td><span data-bind='text: participant_name'></span> (<span data-bind='text: participant_email'></span>)</td>
+                        <td data-bind='text: parameter_label'></td>
                         <td data-bind='text: value'></td>
+                        <td data-bind='text: date_created'></td>
                     </tr>
                     </tbody>
                 </table>
