--- a/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
+++ b/vcweb/lighterprints/templates/lighterprints/email/experiment-registration.html
@@ -7,7 +7,7 @@ with four other students who are also in ASB 328. You can earn extra credit poin
 within the app to reduce your virtual carbon footprint. 
 </p>
 <p>
-To access the experiment visit <a href='https://vcweb.asu.edu'>https://vcweb.asu.edu</a> and login with the following
+To access the experiment visit <a href='https://vcweb.asu.edu/accounts/login'>https://vcweb.asu.edu/accounts/login</a> and login with the following
 credentials:
 </p>
 <table cellspacing="3" cellpadding="3">
